--- a/UFCA.ipynb
+++ b/UFCA.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNlLOpteeWIN728E/ViZdvx",
+      "authorship_tag": "ABX9TyNWFvlA1w4JZXMkKQfeuDrr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -173,14 +173,15 @@
       "source": [
         "demanda_contratada = 139 #[kW]\r\n",
         "#Tarifas de consumo e usos\r\n",
-        "TUSD_FP=0.0896126\r\n",
-        "TUSD_P= 1.3417532\r\n",
-        "TE_FP=0.3177174\r\n",
-        "TE_P= 0.474268\r\n",
-        "Tarifa_total_FP=TUSD_FP+TE_FP\r\n",
-        "Tarifa_total_P=TUSD_P+TE_P"
+        "Tarifa_total_FP=0.40733\r\n",
+        "Tarifa_total_P=1.81318\r\n",
+        "TUSD_FP=Tarifa_total_FP*0.22\r\n",
+        "TUSD_P=Tarifa_total_P*0.74\r\n",
+        "TE_FP=Tarifa_total_FP-TUSD_FP\r\n",
+        "TE_P= Tarifa_total_P-TUSD_P\r\n",
+        "RetencaoFederal=0.0620\r\n"
       ],
-      "execution_count": 34,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -188,19 +189,24 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 392
+          "height": 445
         },
         "id": "igozcwpk7cru",
-        "outputId": "79b426bb-aae1-4adb-d078-25004cd0d4c9"
+        "outputId": "e2d80ac3-3f94-42cf-d95b-ff4357ae4c22"
       },
       "source": [
         "X1 = UC1[UC1['ANO']==2019][['MÊS','ENERGIA_PONTA', 'ENERGIA_FPONTA', 'DEMANDA_REGISTRADA_P', 'DEMANDA_REGISTRADA_FP', 'DEMANDA_ULTRAPASSAG', 'TAR_ULTRAPASSAG', 'TAR_TUSD_KW_FP', 'TAR_DEMANDA_FP_SEM ICMS']]\r\n",
         "X1[['DEMANDA_ULTRAPASSAG', 'TAR_ULTRAPASSAG', 'TAR_DEMANDA_FP_SEM ICMS']] = X1[['DEMANDA_ULTRAPASSAG', 'TAR_ULTRAPASSAG', 'TAR_DEMANDA_FP_SEM ICMS']].fillna(0)\r\n",
         "X1[['Differença Demanda']] = X1[['DEMANDA_REGISTRADA_FP']] - demanda_contratada\r\n",
         "X1[['Valor Demanda']] = (X1['DEMANDA_REGISTRADA_FP'] * X1['TAR_TUSD_KW_FP']) +(X1['Differença Demanda'] *-1* X1['TAR_DEMANDA_FP_SEM ICMS'])\r\n",
+        "X1[['Valor Consumo P+FP TUSD']] = (TUSD_FP*X1['ENERGIA_FPONTA'])+(TUSD_P*X1['ENERGIA_PONTA'])\r\n",
+        "X1[['Valor Consumo TE']] = (TE_FP*X1['ENERGIA_FPONTA'])+(TE_P*X1['ENERGIA_PONTA'])\r\n",
+        "X1[['Valor da conta no cativo']] = (X1['Valor Demanda']+X1['Valor Consumo P+FP TUSD']+X1['Valor Consumo TE'])-((X1['Valor Demanda']+X1['Valor Consumo P+FP TUSD']+X1['Valor Consumo TE'])*RetencaoFederal)\r\n",
+        "X1[['Valor consumo TUSD_P']]= (TUSD_P*X1['ENERGIA_PONTA'])\r\n",
+        "X1[['Valor consumo TUSD_FP']]= (TUSD_FP*X1['ENERGIA_FPONTA'])\r\n",
         "X1"
       ],
-      "execution_count": 30,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -235,6 +241,11 @@
               "      <th>TAR_DEMANDA_FP_SEM ICMS</th>\n",
               "      <th>Differença Demanda</th>\n",
               "      <th>Valor Demanda</th>\n",
+              "      <th>Valor Consumo P+FP TUSD</th>\n",
+              "      <th>Valor Consumo TE</th>\n",
+              "      <th>Valor da conta no cativo</th>\n",
+              "      <th>Valor consumo TUSD_P</th>\n",
+              "      <th>Valor consumo TUSD_FP</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -251,6 +262,11 @@
               "      <td>14.31754</td>\n",
               "      <td>-38.20</td>\n",
               "      <td>2563.810012</td>\n",
+              "      <td>3362.758738</td>\n",
+              "      <td>6642.528092</td>\n",
+              "      <td>11789.812838</td>\n",
+              "      <td>1653.039942</td>\n",
+              "      <td>1709.718795</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>53</th>\n",
@@ -265,6 +281,11 @@
               "      <td>14.44366</td>\n",
               "      <td>-43.66</td>\n",
               "      <td>2561.850605</td>\n",
+              "      <td>3025.565623</td>\n",
+              "      <td>6111.308447</td>\n",
+              "      <td>10973.403745</td>\n",
+              "      <td>1445.068196</td>\n",
+              "      <td>1580.497426</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>54</th>\n",
@@ -279,6 +300,11 @@
               "      <td>14.07522</td>\n",
               "      <td>-29.38</td>\n",
               "      <td>2555.489417</td>\n",
+              "      <td>3111.309754</td>\n",
+              "      <td>6231.025346</td>\n",
+              "      <td>11160.159397</td>\n",
+              "      <td>1502.763584</td>\n",
+              "      <td>1608.546170</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>55</th>\n",
@@ -293,6 +319,11 @@
               "      <td>0.00000</td>\n",
               "      <td>5.06</td>\n",
               "      <td>2878.229483</td>\n",
+              "      <td>5494.508290</td>\n",
+              "      <td>9391.995870</td>\n",
+              "      <td>16663.320157</td>\n",
+              "      <td>3158.487033</td>\n",
+              "      <td>2336.021257</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>56</th>\n",
@@ -307,6 +338,11 @@
               "      <td>0.00000</td>\n",
               "      <td>13.46</td>\n",
               "      <td>3202.929992</td>\n",
+              "      <td>4939.375407</td>\n",
+              "      <td>8242.365823</td>\n",
+              "      <td>15368.821606</td>\n",
+              "      <td>2902.212172</td>\n",
+              "      <td>2037.163236</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>57</th>\n",
@@ -321,6 +357,11 @@
               "      <td>0.00000</td>\n",
               "      <td>15.14</td>\n",
               "      <td>3375.969656</td>\n",
+              "      <td>5446.632727</td>\n",
+              "      <td>9025.113123</td>\n",
+              "      <td>16741.157144</td>\n",
+              "      <td>3220.207680</td>\n",
+              "      <td>2226.425047</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>58</th>\n",
@@ -335,6 +376,11 @@
               "      <td>15.75000</td>\n",
               "      <td>-1.24</td>\n",
               "      <td>3031.529794</td>\n",
+              "      <td>5108.908220</td>\n",
+              "      <td>8187.724880</td>\n",
+              "      <td>15315.816794</td>\n",
+              "      <td>3107.500411</td>\n",
+              "      <td>2001.407808</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>59</th>\n",
@@ -349,6 +395,11 @@
               "      <td>16.43420</td>\n",
               "      <td>-58.36</td>\n",
               "      <td>2830.709960</td>\n",
+              "      <td>2961.788633</td>\n",
+              "      <td>5302.335077</td>\n",
+              "      <td>10406.953982</td>\n",
+              "      <td>1627.546632</td>\n",
+              "      <td>1334.242001</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>60</th>\n",
@@ -363,6 +414,11 @@
               "      <td>15.91935</td>\n",
               "      <td>-1.24</td>\n",
               "      <td>3076.599954</td>\n",
+              "      <td>6376.038218</td>\n",
+              "      <td>9856.001592</td>\n",
+              "      <td>18111.504099</td>\n",
+              "      <td>3991.715770</td>\n",
+              "      <td>2384.322448</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>61</th>\n",
@@ -377,6 +433,11 @@
               "      <td>0.00000</td>\n",
               "      <td>1.70</td>\n",
               "      <td>2936.469501</td>\n",
+              "      <td>6945.638090</td>\n",
+              "      <td>10495.497230</td>\n",
+              "      <td>19114.193322</td>\n",
+              "      <td>4423.760300</td>\n",
+              "      <td>2521.877789</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>62</th>\n",
@@ -391,6 +452,11 @@
               "      <td>41.83822</td>\n",
               "      <td>25.22</td>\n",
               "      <td>2380.199327</td>\n",
+              "      <td>6342.046837</td>\n",
+              "      <td>10001.199983</td>\n",
+              "      <td>17562.592486</td>\n",
+              "      <td>3908.527072</td>\n",
+              "      <td>2433.519766</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>63</th>\n",
@@ -405,33 +471,38 @@
               "      <td>15.62701</td>\n",
               "      <td>-8.07</td>\n",
               "      <td>2958.220140</td>\n",
+              "      <td>4903.625364</td>\n",
+              "      <td>8282.757896</td>\n",
+              "      <td>15143.637989</td>\n",
+              "      <td>2849.883797</td>\n",
+              "      <td>2053.741567</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "          MÊS  ENERGIA_PONTA  ...  Differença Demanda  Valor Demanda\n",
-              "52    Janeiro           1232  ...              -38.20    2563.810012\n",
-              "53  Fevereiro           1077  ...              -43.66    2561.850605\n",
-              "54      Março           1120  ...              -29.38    2555.489417\n",
-              "55      Abril           2354  ...                5.06    2878.229483\n",
-              "56      Maio            2163  ...               13.46    3202.929992\n",
-              "57      Junho           2400  ...               15.14    3375.969656\n",
-              "58      Julho           2316  ...               -1.24    3031.529794\n",
-              "59     Agosto           1213  ...              -58.36    2830.709960\n",
-              "60   Setembro           2975  ...               -1.24    3076.599954\n",
-              "61    Outubro           3297  ...                1.70    2936.469501\n",
-              "62   Novembro           2913  ...               25.22    2380.199327\n",
-              "63   Dezembro           2124  ...               -8.07    2958.220140\n",
+              "          MÊS  ENERGIA_PONTA  ...  Valor consumo TUSD_P  Valor consumo TUSD_FP\n",
+              "52    Janeiro           1232  ...           1653.039942            1709.718795\n",
+              "53  Fevereiro           1077  ...           1445.068196            1580.497426\n",
+              "54      Março           1120  ...           1502.763584            1608.546170\n",
+              "55      Abril           2354  ...           3158.487033            2336.021257\n",
+              "56      Maio            2163  ...           2902.212172            2037.163236\n",
+              "57      Junho           2400  ...           3220.207680            2226.425047\n",
+              "58      Julho           2316  ...           3107.500411            2001.407808\n",
+              "59     Agosto           1213  ...           1627.546632            1334.242001\n",
+              "60   Setembro           2975  ...           3991.715770            2384.322448\n",
+              "61    Outubro           3297  ...           4423.760300            2521.877789\n",
+              "62   Novembro           2913  ...           3908.527072            2433.519766\n",
+              "63   Dezembro           2124  ...           2849.883797            2053.741567\n",
               "\n",
-              "[12 rows x 11 columns]"
+              "[12 rows x 16 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 49
         }
       ]
     },
